fixed overflow solar system overriding scroll on others view

--- a/src/styles/solar-system.scss
+++ b/src/styles/solar-system.scss
@@ -183,7 +183,6 @@ $pluto: #FF8732;
 }
 
 body {
-    overflow: hidden;
     background: black;
     height: 100vh;
     label {
